# human_ws

./: .gitignore  .gitmodules  Installation.md  README.md  run_locobot_pedsim.sh  run_remote_docker.sh
.devcontainer/: devcontainer.json
costmap_generator/: CMakeLists.txt  package.xml
costmap_generator/src/: laser_to_world.cpp  laserscan_box_filter.cpp  laserscan_filter_node.cpp
docker/: Dockerfile  docker_zedbox_bringup.sh
human_perception/: CMakeLists.txt  package.xml
human_perception/config/: common.yaml  human_tracker.yaml  multi_tracker.yaml  robot_tracker.yaml
human_perception/config/zed/: common.yaml
human_perception/human_perception/: human_tracks.py  multi_track_visualizer.py  robot_track.py  utils.py
human_perception/include/: track_publisher.hpp
human_perception/include/human_perception/: human_tf2_publisher.hpp
human_perception/launch/: multi_tracker.launch.py  zed2.launch.py
human_perception/rviz/: multi_tracking.rviz
human_perception/src/: ego_trajectory_visualizer.cpp  human_tf2_publisher.cpp  human_track_publisher.cpp  robot_track_publisher.cpp
nav2_soloco_controller/: CMakeLists.txt  package.xml  solococ.xml
nav2_soloco_controller/config/: neural_motion_planner.yaml
nav2_soloco_controller/include/nav2_soloco_controller/: controller.hpp  subgoal_publisher.hpp  subgoal_visualizer.hpp
nav2_soloco_controller/include/nav2_soloco_controller/tools/: parameters_handler.hpp  path_handler.hpp
nav2_soloco_controller/include/soloco_planner/: subgoal_publisher.hpp
nav2_soloco_controller/launch/: social_planner.launch.py
nav2_soloco_controller/nav2_soloco_controller/: neural_motion_planner.py  occupancy_grid_manager.py
nav2_soloco_controller/nav2_soloco_controller/models/: AR_fast.py  AR_fast_goal.py  CEM_policy_IAR.py  IAR_full_Tranf.py  IAR_full_Tranf_Goal.py  MPPI_policy_AR.py  utils.py
nav2_soloco_controller/nav2_soloco_controller/models/weights/SIM2Goal-univ_IAR/: checkpoint_with_model.pt
nav2_soloco_controller/nav2_soloco_controller/models/weights/SIM2Goal-univ_fast_AR/: checkpoint_no_model.pt  checkpoint_with_model.pt
nav2_soloco_controller/nav2_soloco_controller/models/weights/SIMNoGoal-univ_fast_AR2/: checkpoint_no_model.pt
nav2_soloco_controller/soloco_planner/models/: CEM_policy_IAR.py  DWA.py  IAR_full_Tranf.py  utils.py
nav2_soloco_controller/src/: controller.cpp  parameters_handler.cpp  path_hander.cpp  path_handler.cpp  subgoal_publisher.cpp  subgoal_visualizer.cpp
nav2_soloco_costmap_plugin/: CMakeLists.txt  costmap_plugins.xml  package.xml
nav2_soloco_costmap_plugin/plugins/: obstacle_people_filtered_layer.cpp  people_filter_layer.cpp  social_layer.cpp
pedsim_relay/: CMakeLists.txt  package.xml
pedsim_relay/config/: human_tracker.yaml  pedsim_tracker.yaml
pedsim_relay/include/pedsim_relay/: pedsim_relay_node.hpp
pedsim_relay/launch/: multi_tracker.launch.py  pedsim_tracker.launch.py
pedsim_relay/pedsim_relay/: pedsim_tracks.py  robot_track.py
pedsim_relay/src/: pedsim_relay_node.cpp
social_motion_planner/: CMakeLists.txt  package.xml
social_motion_planner/config/: neural_motion_planner.yaml
social_motion_planner/launch/: social_planner.launch.py
social_motion_planner/social_motion_planner/: ego_tracker.py  global_nav2_client.py  neural_motion_planner.py  occupancy_grid_manager.py
social_motion_planner/social_motion_planner/data/: social_nav_env.py  utils.py
social_motion_planner/social_motion_planner/models/: AR_fast.py  CEM_policy_IAR.py  DWA.py  IAR_full_Tranf.py  config.py
social_motion_planner/social_motion_planner/models/weights/SIMNoGoal-univ_fast_AR/: checkpoint_no_model.pt  checkpoint_with_model.pt
social_motion_planner/social_motion_planner/models/weights/SIMNoGoal-univ_fast_AR2/: checkpoint_with_model.pt
social_motion_planner/src/: laser_to_world.cpp  laserscan_dynamic_filter.cpp  laserscan_filter_node.cpp  laserscan_people_filter.cpp  subgoal_publisher.cpp
soloco_evaluator/: CMakeLists.txt  package.xml
soloco_evaluator/config/: metrics.yaml
soloco_evaluator/include/soloco_evaluator/: prediction_evaluator.hpp
soloco_evaluator/launch/: soloco_evaluator.launch.py
soloco_evaluator/soloco_evaluator/: hunav_metrics.py  pedsim_evaluator_node.py  sfm.py  soloco_evaluator_node.py
soloco_evaluator/src/: prediction_evaluator.cpp  soloco_evaluator.cpp
soloco_interfaces/: CMakeLists.txt  package.xml
soloco_interfaces/action/: NavigateToXYGoal.action
soloco_interfaces/msg/: AgentFuture.msg  AgentFutures.msg  EgoTrajectory.msg  EvaluationMetrics.msg  TrackedAgent.msg  TrackedAgents.msg  TrackedPerson.msg  TrainingDataset.msg
soloco_launch/: CMakeLists.txt  package.xml
soloco_launch/config/: neural_motion_planner.yaml  slam_toolbox_localization.yaml  slam_toolbox_online_async.yaml  slam_toolbox_online_sync.yaml
soloco_launch/launch/: intelnuc_bringup.launch.py  intelnuc_locobot_bringup.launch.py  intelnuc_locobot_nav2_bringup.launch.py  laserscan_to_pointcloud.py  locobot_pedsim.launch.py  locobot_sim.launch.py  nav2_planner_server_slam.launch.py  nav2_slam_toolbox.launch.py  nav2_slam_toolboxlaunch.py  nav2_soloco_controller.launch.py  nav2_soloco_planner.launch.py  remote_view.launch.py  zed_pointcloud_to_laserscan.launch.py  zedbox_bringup.launch.py
soloco_launch/maps/: tb3_house_demo_crowd.yaml
soloco_launch/params/: smac_dwb_nav2_params.yaml  smac_mppi_nav2_params.yaml  smac_mppi_nav2_params_sim.yaml  smac_nav2_params.yaml  smac_soloco_nav2_params.yaml
soloco_launch/rviz/: remote_view.rviz
soloco_launch/worlds/: empty.world  office-cubicles.world
soloco_perception/: CMakeLists.txt  package.xml
soloco_perception/config/: human_tracker.yaml  robot_tracker.yaml
soloco_perception/config/zed/: common.yaml  zed2.yaml
soloco_perception/launch/: multi_tracker.launch.py  perception.launch.py  zed2.launch.py
soloco_perception/soloco_perception/: human_tracks.py  multi_track_visualizer.py  robot_track.py  rosbag_node.py  utils.py
soloco_perception/src/: human_tf2_publisher.cpp
soloco_planner/: CMakeLists.txt  package.xml
(+18 files in other folders)
